--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body>
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -46,10 +46,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
+                <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="contact.html"> Contact Us</a>
                 </li>
               </ul>
@@ -64,59 +64,225 @@
       </div>
     </header>
     <!-- end header section -->
-
+    <!-- slider section -->
+    <section class=" slider_section position-relative">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="col-lg-10 col-md-11 mx-auto">
+                <div class="detail-box">
+                  <div>
+                    <h3>
+                      My
+                    </h3>
+                    <h2>
+                      Homepage
+                    </h2>
+                    <h1>
+                      Jonathan LEE
+                    </h1>
+                    <p>
+                      I am studying homepage production and tensorflow and am a third year middle school student attending remnant leader school.                    </p>
+                    <div class="nav-link">
+                      <a href="contact.html">
+                        Contact Us
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="col-lg-10 col-md-11 mx-auto">
+                <div class="detail-box">
+                  <div>
+                    <h3>
+                      My first masterpiece
+                    </h3>
+                    <h2>
+                      Website creation
+                    </h2>
+                    <h1>
+                      Yume soba pork cutlet
+                    </h1>
+                    <p>
+                      This is my first piece and the homepage I created while taking a homepage class. Creating this homepage served as an opportunity to become more interested in homepages.
+                    </p>
+                    <div class="nav-link">
+                      <a href="contact.html">
+                        Contact Us
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        </ol>
+      </div>
+    </section>
+    <!-- end slider section -->
   </div>
 
 
-  <!-- contact section -->
+  <!-- Us section -->
 
-  <section class="contact_section ">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6 px-0">
-          <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-lg-5 col-md-6">
-          <div class="form_container pr-0 pr-lg-5 mr-0 mr-lg-2">
-            <div class="heading_container">
-              <h2>
-                Contact Us
-              </h2>
+  <section class="us_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+        <h2>
+          
+        </h2>
+      </div>
+
+      <div class="us_container ">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/u-1.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                  Currently attending RLS
+                </h5>
+                <p>
+                  A school that nurtures future leaders in Hamyang
+                </p>
+              </div>
             </div>
-            <form action="">
-              <div>
-                <input type="text" placeholder="Name" />
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/u-4.png" alt="">
               </div>
-              <div>
-                <input type="email" placeholder="Email" />
+              <div class="detail-box">
+                <h5>
+                  I'm studying website creation.
+                </h5>
+                <p>
+                  My goal is create a RLS homepage.
+                </p>
               </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/u-2.png" alt="">
               </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
+              <div class="detail-box">
+                <h5>
+                  HEALTHY DIET PLAN
+                </h5>
+                <p>
+                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                </p>
               </div>
-              <div class="d-flex ">
-                <button>
-                  Send
-                </button>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/u-3.png" alt="">
               </div>
-            </form>
+              <div class="detail-box">
+                <h5>
+                  SPORT TRAINING
+                </h5>
+                <p>
+                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- end contact section -->
+  <!-- end us section -->
+
+
+  <!-- heathy section -->
+
+  <section class="heathy_section layout_padding">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-12 mx-auto">
+          <div class="detail-box">
+            <h2>
+              HEALTHY MIND, HEALTHY BODY
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            </p>
+            <div class="btn-box">
+              <a href="http://server.7942.or.kr">
+                VIEW MORE
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- end heathy section -->
+
+  <!-- trainer section -->
+
+  <section class="trainer_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+        <h2>
+          My SNS Account
+        </h2>
+      </div>
+        <div class="col-lg-4 col-md-6 mx-auto">
+          <div class="box">
+            <div class="name">
+              <h5>
+                Jonathan LEE
+              </h5>
+            </div>
+            <div class="img-box">
+              <img src="images/t1.jpg" alt="">
+            </div>
+            <div class="social_box">
+              <a href="https://www.facebook.com/profile.php?id=100089657437505">
+                <img src="images/facebook-logo.png" alt="">
+              </a>
+              <a href="">
+                <img src="images/twitter.png" alt="">
+              </a>
+              <a href="https://www.instagram.com/08._.lsu/">
+                <img src="images/instagram-logo.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end trainer section -->
 
   <!-- info section -->
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="info_items">
-        <a href="">
+        <a href="https://kko.to/5I3tjl9XDB">
           <div class="item ">
             <div class="img-box box-1">
               <img src="" alt="">
@@ -124,30 +290,31 @@
             <div class="detail-box">
               <p>
                 Location
+                <div>Remnant Leader School</div>
               </p>
             </div>
           </div>
         </a>
-        <a href="">
+        <a href="contact.html">
           <div class="item ">
             <div class="img-box box-2">
               <img src="" alt="">
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +82 1081084751
               </p>
             </div>
           </div>
         </a>
-        <a href="">
+        <a href="contact.html">
           <div class="item ">
             <div class="img-box box-3">
               <img src="" alt="">
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                junsu4751@gmail.com
               </p>
             </div>
           </div>
@@ -161,8 +328,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2023 Design by Jonathan
     </p>
   </footer>
   <!-- footer section -->
